Fixed nav bar was not aligning with heading, styled with positioning to fix it

--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,9 @@ a {
     color: #362625;
 }
 
+nav ul{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
